fix: 선수 폐쇄 충돌 진단 순서 고정